--- a/x22219340/COVID ETL.ipynb
+++ b/x22219340/COVID ETL.ipynb
@@ -565,7 +565,9 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "4fc57a60",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -721,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
